--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,8 @@
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <!--<link href="https://cdn.bootcss.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg"/>-->
   <!--<script src="https://use.fontawesome.com/d556232004.js"></script>-->
-
+  <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <app-root>Loading...</app-root>
