--- a/ionic-app/src/pages/home/home.html
+++ b/ionic-app/src/pages/home/home.html
@@ -1,18 +1,25 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Poseidon</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <!--<h3>Ionic Menu Starter</h3>-->
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <!--<p>-->
+  <!--If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.-->
+  <!--</p>-->
+
+  <!--<button ion-button secondary menuToggle>Toggle Menu</button>-->
+
+  <ion-list>
+    <button ion-item *ngFor="let item of recentJournal" (click)="itemSelected(item)">
+      {{ item.title }}
+    </button>
+  </ion-list>
 </ion-content>
