--- a/ionic-app/src/pages/home/home.html
+++ b/ionic-app/src/pages/home/home.html
@@ -4,22 +4,25 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Poseidon</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="search"></ion-icon>
+      </button>
+      <button ion-button icon-only>
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
-  <!--<h3>Ionic Menu Starter</h3>-->
-
-  <!--<p>-->
-  <!--If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.-->
-  <!--</p>-->
-
-  <!--<button ion-button secondary menuToggle>Toggle Menu</button>-->
+<ion-content class="card-background-page">
 
   <ion-list>
-    <button ion-item *ngFor="let item of recentJournal" (click)="itemSelected(item)">
-      {{ item.title }}
-    </button>
+    <ion-card *ngFor="let item of recentJournalList" (click)="itemSelected(item)">
+      <img src="{{ item.volCoverImg }}" />
+      <div class="card-title">{{ item.title }}</div>
+      <div class="card-subtitle">{{ item.keyWords }}</div>
+    </ion-card>
   </ion-list>
+
 </ion-content>
